# collyzer

./: .env.example  .gitignore  README.md  analysis_rules.yml  collector.py  config.py  database.py  flake.nix  justfile  main.py  parser.py  parsing_rules.yml  pyproject.toml
queue/processed/: sample-sample_1630892e-7a5a-478f-88b2-74f01059ffb2.json
sample_logs/: auth.sample  sample.json  syslog.sample
src/: analyzer.py  collector.py  config.py  database.py  log_parser.py  main.py  parser_service.py  sample_loader.py  views.py
tests/: conftest.py  test_analyzer.py  test_collector.py  test_database.py  test_log_parser.py
